# NightBloom

./: .gitignore  .gitmodules  BuildAll.bat  C2471 fix.bat  CmakeLists.txt  CreateDistribution.bat  README.md  README.txt  Setup.bat
Docs/: AI_CONTEXT.md  ARCHITECTURE.md  Nightbloom Structure.txt  RENDERER_AI_CONTEXT.md  TODO.md
Editor/: CMakeLists.txt  GenerateEditor.bat
Editor/Shaders/: Bloom.frag  CloudRaymarch.comp  Clouds.frag  Clouds.vert  Firefly.frag  Firefly.vert  FireflyUpdate.comp  Grass.frag  Grass.vert  Mesh.frag  Mesh.vert  PostProcess.frag  PostProcess.vert  Terrain.frag  Terrain.vert  TerrainShadow.vert  Water.frag  Water.vert  noise.comp  noise2D.comp
Editor/Shaders/Include/: scene_common.glsl  shadows.glsl
Editor/Source/: EditorApp.cpp  EditorContext.hpp  EditorFileUtils.cpp  EditorFileUtils.hpp  EditorUtils.cpp  EditorUtils.hpp
Editor/Source/Panels/: AssetBrowserPanel.cpp  AssetBrowserPanel.hpp  CloudPanel.cpp  CloudPanel.hpp  ConsolePanel.cpp  ConsolePanel.hpp  DayNightPanel.cpp  DayNightPanel.hpp  DebugPanel.cpp  DebugPanel.hpp  FireflyPanel.cpp  FireflyPanel.hpp  GrassPanel.cpp  GrassPanel.hpp  InspectorPanel.cpp  InspectorPanel.hpp  LightingPanel.cpp  LightingPanel.hpp  LiveShaderTestPanel.cpp  LiveShaderTestPanel.hpp  NoiseDebugPanel.cpp  NoiseDebugPanel.hpp  ProjectSettingsPanel.cpp  ProjectSettingsPanel.hpp  SceneHierarchyPanel.cpp  SceneHierarchyPanel.hpp  ShaderCompilerPanel.cpp  ShaderCompilerPanel.hpp  TerrainEditorPanel.cpp  TerrainEditorPanel.hpp  ViewportPanel.cpp  ViewportPanel.hpp  WaterEditorPanel.cpp  WaterEditorPanel.hpp
Engine/: CMakeLists.txt
Engine/Core/: Application.cpp  Application.hpp  Assert.hpp  Base.hpp  Engine.cpp  Engine.hpp  FileUtils.hpp  PerformanceMetrics.cpp  PerformanceMetrics.hpp  Scene.hpp
Engine/Core/Logger/: ConsoleLogger.hpp  FileLogger.cpp  Logger.cpp
Engine/Input/: InputSystem.hpp
Engine/Math/: MathCommon.hpp  Vec3.hpp
Engine/Renderer/: AssetManager.cpp  AssetManager.hpp  Camera.cpp  Camera.hpp  DrawCommandSystem.hpp  GLTFLoader.cpp  Light.hpp  Material.hpp  Model.cpp  Model.hpp  PipelineDesc.hpp  PipelineInterface.hpp  PushConstants.hpp  RenderDevice.hpp  Renderer.cpp  Renderer.hpp  TextureLoader.hpp  Vertex.hpp
Engine/Renderer/Components/: CommandRecorder.cpp  CommandRecorder.hpp  ComputeDispatcher.cpp  ComputeDispatcher.hpp  FrameSyncManager.cpp  FrameSyncManager.hpp  RenderPassManager.cpp  RenderPassManager.hpp  ResourceManager.cpp  ResourceManager.hpp  UIManager.hpp
Engine/Renderer/Vulkan/: VulkanBuffer.cpp  VulkanBuffer.hpp  VulkanCommandPool.cpp  VulkanCommandPool.hpp  VulkanCommon.hpp  VulkanDescriptorManager.cpp  VulkanDescriptorManager.hpp  VulkanDevice.cpp  VulkanDevice.hpp  VulkanMemoryManager.cpp  VulkanMemoryManager.hpp  VulkanPipeline.cpp  VulkanPipeline.hpp  VulkanPipelineAdapter.hpp  VulkanShader.cpp  VulkanShader.hpp  VulkanStagingBufferPool.cpp  VulkanSwapchain.cpp  VulkanSwapchain.hpp  VulkanTexture.cpp  VulkanTexture.hpp
Engine/Tests/: LoggerTests.cpp  MathTests.cpp  RendererTests.cpp
Engine/Window/: Window.cpp  Window.hpp  WindowDesc.hpp
Engine/Window/Platform/Win32/: Win32Window.cpp  Win32Window.hpp
NightBloom/: README.md
NightBloom/Engine/: CMakeLists.txt
NightBloom/Engine/Core/: Application.hpp  Assert.cpp  Engine.cpp  FileUtils.cpp  Platform.hpp  Scene.hpp  SceneSerializer.cpp  SceneSerializer.hpp  Transform.hpp
NightBloom/Engine/Core/Logger/: ConsoleLogger.cpp  FileLogger.cpp  FileLogger.hpp  Logger.hpp
NightBloom/Engine/Foliage/: BladeMesh.hpp  GrassSystem.cpp  GrassSystem.hpp
NightBloom/Engine/Hydro/: WaterSystem.cpp  WaterSystem.hpp
NightBloom/Engine/Input/: InputSystem.cpp
NightBloom/Engine/Math/: MathUtils.hpp  Vec2.cpp  Vec2.hpp  Vec4.cpp  Vec4.hpp
NightBloom/Engine/Renderer/: AssetManager.cpp  Camera.cpp  Camera.hpp  DrawCommandSystem.hpp  Frustum.hpp  GLTFLoader.hpp  Light.hpp  Mesh.hpp  NoiseTextureGenerator.cpp  NoiseTextureGenerator.hpp  PipelineFactory.cpp  PipelineInterface.hpp  RenderDevice.cpp  RenderDevice.hpp  Renderer.cpp  Renderer.hpp  TextureLoader.cpp  Vertex.hpp
NightBloom/Engine/Renderer/Components/: CommandRecorder.cpp  CommandRecorder.hpp  GpuProfiler.cpp  GpuProfiler.hpp  RenderPassManager.cpp  RenderPassManager.hpp  ResourceManager.cpp  ResourceManager.hpp  ShadowMapManager.cpp  ShadowMapManager.hpp  UIManager.cpp
NightBloom/Engine/Renderer/Vulkan/: VulkanBuffer.hpp  VulkanCommandPool.cpp  VulkanDescriptorManager.cpp  VulkanDescriptorManager.hpp  VulkanDevice.cpp  VulkanDevice.hpp  VulkanMemoryManager.cpp  VulkanMemoryManager.hpp  VulkanPipeline.cpp  VulkanPipeline.hpp  VulkanPipelineAdapter.hpp  VulkanStagingBufferPool.hpp  VulkanTexture.cpp  VulkanTexture.hpp
NightBloom/Engine/Terrain/: TerrainMesh.hpp  TerrainSystem.cpp  TerrainSystem.hpp
NightBloom/Engine/Tests/: RendererTests.cpp
NightBloom/Engine/VFX/: CloudSystem.cpp  CloudSystem.hpp  FireflySystem.cpp  FireflySystem.hpp
NightBloom/Engine/Window/: Window.hpp  WindowDesc.hpp
NightBloom/Scripts/: GenerateProject.bat
NightBloom/cmake/: NightbloomEngineConfig.cmake.in
